## ****************************************************************************
##
##  The following code is derived, directly or indirectly, from the SystemC
##  source code Copyright (c) 1996-2014 by all Contributors.
##  All Rights reserved.
##
##  The contents of this file are subject to the restrictions and limitations
##  set forth in the SystemC Open Source License (the "License");
##  You may not use this file except in compliance with such restrictions and
##  limitations. You may obtain instructions on how to receive a copy of the
##  License at http://www.accellera.org/. Software distributed by Contributors
##  under the License is distributed on an "AS IS" basis, WITHOUT WARRANTY OF
##  ANY KIND, either express or implied. See the License for the specific
##  language governing rights and limitations under the License.
##
## ****************************************************************************
##
##  Makefile.am --
##  Process this file with automake to produce a Makefile.in file.
##
## ****************************************************************************
##
##  Original Authors:
##  Norris Ip, Dean Shea, John Rose, Jasvinder Singh, William Paulsen,
##  John Pierce, Rachida Kebichi, Ted Elkind, David Bailey,
##  Cadence Design Systems, Inc., 2002-09-23
##
## ****************************************************************************
##
##  MODIFICATION LOG - modifiers, enter your name, affiliation, date and
##  changes you are making here.
##
##      Name, Affiliation, Date:
##  Description of Modification:
##
## ****************************************************************************

SUBDIRS = doc

EXTRA_DIST = \
	C17.blif \
	C17.out \
	C17.tst \
	C880.blif \
	C880.out \
	C880.tst \
	Makefile.cudd \
	README \
	bnet.c \
	bnet.h \
	chkMterm.c \
	main.c \
	mult32a.blif \
	mult32a.out \
	mult32a.tst \
	nanotrav.1 \
	ntr.c \
	ntr.h \
	ntrBddTest.c \
	ntrHeap.c \
	ntrMflow.c \
	ntrZddTest.c \
	rcn25.blif \
	rcn25.out \
	rcn25.tst \
	s27.blif \
	s27.out \
	s27.tst \
	tst.sh \
	ucbqsort.c

