## ****************************************************************************
##
##  The following code is derived, directly or indirectly, from the SystemC
##  source code Copyright (c) 1996-2014 by all Contributors.
##  All Rights reserved.
##
##  The contents of this file are subject to the restrictions and limitations
##  set forth in the SystemC Open Source License (the "License");
##  You may not use this file except in compliance with such restrictions and
##  limitations. You may obtain instructions on how to receive a copy of the
##  License at http://www.accellera.org/. Software distributed by Contributors
##  under the License is distributed on an "AS IS" basis, WITHOUT WARRANTY OF
##  ANY KIND, either express or implied. See the License for the specific
##  language governing rights and limitations under the License.
##  
## ****************************************************************************
##
##  Makefile.am --
##  Process this file with automake to produce a Makefile.in file.
## 
## ****************************************************************************
##
##  Original Authors:
##  Norris Ip, Dean Shea, John Rose, Jasvinder Singh, William Paulsen,
##  John Pierce, Rachida Kebichi, Ted Elkind, David Bailey,
##  Cadence Design Systems, Inc., 2002-09-23
##
## ****************************************************************************
##  
##  MODIFICATION LOG - modifiers, enter your name, affiliation, date and
##  changes you are making here.
##
##      Name, Affiliation, Date:
##  Description of Modification:
##
## ****************************************************************************

SUBDIRS = icons

EXTRA_DIST = \
	cudd.doc \
	cudd.ps \
	cuddAllAbs.html \
	cuddAllDet.html \
	cuddExtAbs.html \
	cuddExtDet.html \
	cuddIntro.css \
	cuddIntro.html \
	footnode.html \
	img1.gif \
	img10.gif \
	img2.gif \
	img3.gif \
	img4.gif \
	img5.gif \
	img6.gif \
	img7.gif \
	img8.gif \
	img9.gif \
	index.html \
	node1.html \
	node10.html \
	node11.html \
	node12.html \
	node13.html \
	node14.html \
	node15.html \
	node16.html \
	node17.html \
	node18.html \
	node19.html \
	node2.html \
	node20.html \
	node21.html \
	node22.html \
	node23.html \
	node24.html \
	node25.html \
	node26.html \
	node27.html \
	node28.html \
	node29.html \
	node3.html \
	node30.html \
	node31.html \
	node32.html \
	node33.html \
	node34.html \
	node35.html \
	node36.html \
	node37.html \
	node38.html \
	node39.html \
	node4.html \
	node40.html \
	node5.html \
	node6.html \
	node7.html \
	node8.html \
	node9.html 
